DuPont DevSB/src/objects/Solution.object
<CustomObject>
    <businessProcesses>
        <fullName>Product</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Draft</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Retired</fullName>
        </values>
        <values>
            <fullName>Reviewed - Active</fullName>
        </values>
        <values>
            <fullName>Reviewed - Discontinued</fullName>
        </values>
        <values>
            <fullName>Reviewed - Divested</fullName>
        </values>
        <values>
            <fullName>Reviewed - Inactive</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Solution</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Draft</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Retired</fullName>
        </values>
        <values>
            <fullName>Reviewed - Active</fullName>
        </values>
        <values>
            <fullName>Reviewed - Discontinued</fullName>
        </values>
        <values>
            <fullName>Reviewed - Divested</fullName>
        </values>
        <values>
            <fullName>Reviewed - Inactive</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Application_Description__c</fullName>
        <description>Describe potential applications for solution (e.g. prouduct uses).</description>
        <label>Application Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confidential_Information__c</fullName>
        <description>Information for display only to selected users.</description>
        <label>Confidential Information</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Content_Owner__c</fullName>
        <description>Subject Matter Expert (SME) that is responsible for coordinating the content of this solution.</description>
        <label>Content Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <description>Business to whom activity is billed for SLAs.</description>
        <label>Cost Center</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin General</fullName>
                </value>
                <value>
                    <fullName>Advanced Fiber Systems</fullName>
                </value>
                <value>
                    <fullName>Applied BioSciences</fullName>
                </value>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>Business Improvement Resource</fullName>
                </value>
                <value>
                    <fullName>CCER/CPD</fullName>
                </value>
                <value>
                    <fullName>Central Research &amp; Development</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>Corporate Plans</fullName>
                </value>
                <value>
                    <fullName>Corporate Remediation Group</fullName>
                </value>
                <value>
                    <fullName>Cozaar</fullName>
                </value>
                <value>
                    <fullName>Crop Protection</fullName>
                </value>
                <value>
                    <fullName>Display Technologies</fullName>
                </value>
                <value>
                    <fullName>DSAP</fullName>
                </value>
                <value>
                    <fullName>DuPont Capital Management</fullName>
                </value>
                <value>
                    <fullName>DuPont Chemical Solutions</fullName>
                </value>
                <value>
                    <fullName>DuPont of Canada</fullName>
                </value>
                <value>
                    <fullName>DuPont Payment Services</fullName>
                </value>
                <value>
                    <fullName>DuPont Peformance Elastomers</fullName>
                </value>
                <value>
                    <fullName>DuPont Teijin</fullName>
                </value>
                <value>
                    <fullName>Elastomers</fullName>
                </value>
                <value>
                    <fullName>Electronic Technologies</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Engineering Polymers</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Fluoroproducts</fullName>
                </value>
                <value>
                    <fullName>FS&amp;RE</fullName>
                </value>
                <value>
                    <fullName>FuelCells</fullName>
                </value>
                <value>
                    <fullName>GlobalFilms</fullName>
                </value>
                <value>
                    <fullName>GovA/PubA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Generic_Name_Code__c</fullName>
        <description>Preferred common name  or code related to a product or sales aid</description>
        <label>Generic Name/Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography_Comments__c</fullName>
        <description>Additional comments related to the geographic Relevance field</description>
        <label>Geography Comments</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Primary Country or Sub-region which owns this Product or Solution</description>
        <label>Geography</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>AFRICA</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>ANDEAN</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>ASEAN</fullName>
                </value>
                <value>
                    <fullName>ASIA PACIFIC</fullName>
                </value>
                <value>
                    <fullName>AUSTRALASIA</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>BALTIC</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>BENELUX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Description__c</fullName>
        <description>Detailed description for DuPont internal publication.</description>
        <label>Internal Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Keyword_Copy__c</fullName>
        <description>This field is used by the Lead Solution Search sControls.  It stores data from the Keyword objects related to this solution.  ALTERING THIS FIELD WILL BREAK THE SCONTROL.</description>
        <label>Keyword Copy</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language of the solution.</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFRIKAANS</fullName>
                </value>
                <value>
                    <fullName>ALBANIAN</fullName>
                </value>
                <value>
                    <fullName>ARABIC</fullName>
                </value>
                <value>
                    <fullName>ARMENIAN</fullName>
                </value>
                <value>
                    <fullName>AZERBAIJANI</fullName>
                </value>
                <value>
                    <fullName>BASQUE</fullName>
                </value>
                <value>
                    <fullName>BULGARIAN</fullName>
                </value>
                <value>
                    <fullName>BURMESE</fullName>
                </value>
                <value>
                    <fullName>BYELORUSSIAN</fullName>
                </value>
                <value>
                    <fullName>CHINESE</fullName>
                </value>
                <value>
                    <fullName>CROATIAN</fullName>
                </value>
                <value>
                    <fullName>CZECH</fullName>
                </value>
                <value>
                    <fullName>DANISH</fullName>
                </value>
                <value>
                    <fullName>DUTCH</fullName>
                </value>
                <value>
                    <fullName>ENGLISH</fullName>
                </value>
                <value>
                    <fullName>ESTONIAN</fullName>
                </value>
                <value>
                    <fullName>FINNISH</fullName>
                </value>
                <value>
                    <fullName>FRENCH</fullName>
                </value>
                <value>
                    <fullName>GERMAN</fullName>
                </value>
                <value>
                    <fullName>GREEK</fullName>
                </value>
                <value>
                    <fullName>HEBREW</fullName>
                </value>
                <value>
                    <fullName>HINDI</fullName>
                </value>
                <value>
                    <fullName>HUNGARIAN</fullName>
                </value>
                <value>
                    <fullName>ICELANDIC</fullName>
                </value>
                <value>
                    <fullName>INDONESIAN</fullName>
                </value>
                <value>
                    <fullName>ITALIAN</fullName>
                </value>
                <value>
                    <fullName>JAPANESE</fullName>
                </value>
                <value>
                    <fullName>KOREAN</fullName>
                </value>
                <value>
                    <fullName>LATIN</fullName>
                </value>
                <value>
                    <fullName>LATVIAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Validation_Date__c</fullName>
        <description>Date when the record was last validated with the content owner</description>
        <label>Last Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Solution_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Solution ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <description>Media form that the sales aid takes</description>
        <label>Media Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paper Stock</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_DB_ID__c</fullName>
        <label>Migration DB ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Validation_Date__c</fullName>
        <description>Date when the record will be next validated</description>
        <formula>Last_Validation_Date__c +  (30*Validation_Period_months__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Information beyond what is defined in other fields (e.g. JV product).</description>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owning_Org_Copy__c</fullName>
        <label>Owning Org Copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owning_Organization__c</fullName>
        <description>Organization to which the solution belongs (SBU, BU).  Need to reference solutions which relate to multiple SBUs (e.g. Envex) or BU&apos;s (e.g. Pyralux, Centari).</description>
        <label>Owning Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGCP</fullName>
                </value>
                <value>
                    <fullName>AGCP-Agsurf</fullName>
                </value>
                <value>
                    <fullName>AGCP-CPC</fullName>
                </value>
                <value>
                    <fullName>AGCP-Griffin</fullName>
                </value>
                <value>
                    <fullName>AGNH</fullName>
                </value>
                <value>
                    <fullName>AGNH-Biotech</fullName>
                </value>
                <value>
                    <fullName>AGNH-Qualicon</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-Env</fullName>
                </value>
                <value>
                    <fullName>BI-Landscape Systems</fullName>
                </value>
                <value>
                    <fullName>BI-Surf</fullName>
                </value>
                <value>
                    <fullName>BI-Surf-Cons Prod</fullName>
                </value>
                <value>
                    <fullName>BI-Surf-Cons Prod-Fire Safety</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>CORP-Corporate Plans</fullName>
                </value>
                <value>
                    <fullName>CORP-Non-Aligned</fullName>
                </value>
                <value>
                    <fullName>CORP-Non-DuPont Information</fullName>
                </value>
                <value>
                    <fullName>CORS</fullName>
                </value>
                <value>
                    <fullName>CORS-Aviation</fullName>
                </value>
                <value>
                    <fullName>CORS-Corp Remediation</fullName>
                </value>
                <value>
                    <fullName>CORS-Government Affairs</fullName>
                </value>
                <value>
                    <fullName>CORS-Public Affairs</fullName>
                </value>
                <value>
                    <fullName>COZR</fullName>
                </value>
                <value>
                    <fullName>CR&amp;D</fullName>
                </value>
                <value>
                    <fullName>DCM</fullName>
                </value>
                <value>
                    <fullName>DDIS</fullName>
                </value>
                <value>
                    <fullName>DDIS-Display Solutions</fullName>
                </value>
                <value>
                    <fullName>DDIS-OLED</fullName>
                </value>
                <value>
                    <fullName>DEC</fullName>
                </value>
                <value>
                    <fullName>DEC-Circuit Packaging Materials</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owning_SBU__c</fullName>
        <label>Owning SBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Building Innovations</fullName>
                </value>
                <value>
                    <fullName>Chemicals &amp; Fluoroproducts</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Crop Protection</fullName>
                </value>
                <value>
                    <fullName>Electronics &amp; Communications</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Government Affairs</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Industrial Biosciences</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Integrated Operations &amp; Engineering</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing &amp; Sales</fullName>
                </value>
                <value>
                    <fullName>Nutrition &amp; Health</fullName>
                </value>
                <value>
                    <fullName>Packaging &amp; Industrial Polymers</fullName>
                </value>
                <value>
                    <fullName>Performance Coatings</fullName>
                </value>
                <value>
                    <fullName>Performance Polymers</fullName>
                </value>
                <value>
                    <fullName>Pioneer Hi-Bred</fullName>
                </value>
                <value>
                    <fullName>Protection Technologies</fullName>
                </value>
                <value>
                    <fullName>Public Affairs</fullName>
                </value>
                <value>
                    <fullName>Safety Health &amp; Environment</fullName>
                </value>
                <value>
                    <fullName>Science &amp; Technology</fullName>
                </value>
                <value>
                    <fullName>Sustainable Solutions</fullName>
                </value>
                <value>
                    <fullName>Titanium Technologies</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Audience__c</fullName>
        <description>Group of users for which solution was created (e.g. Inquiry Level 1, Inquiry Level 2, Inquiry Level 3, Customer Self-Service).</description>
        <label>Primary Audience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inquiry Level 1</fullName>
                </value>
                <value>
                    <fullName>Inquiry Level 2</fullName>
                </value>
                <value>
                    <fullName>Inquiry Level 3</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Routing_Instructions__c</fullName>
        <label>Routing Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Routing_Method__c</fullName>
        <label>Routing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>eMail</fullName>
                </value>
                <value>
                    <fullName>Paper Mail</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Contact_Geographies__c</fullName>
        <label>Solution Contact Geographies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <description>Solution type (e.g. product/service, incident, issue).</description>
        <label>Solution Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAQ - Internal</fullName>
                </value>
                <value>
                    <fullName>Instructions</fullName>
                </value>
                <value>
                    <fullName>Issue - Public Affairs</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Partnership Information</fullName>
                </value>
                <value>
                    <fullName>Product Information</fullName>
                </value>
                <value>
                    <fullName>Sales Aid</fullName>
                </value>
                <value>
                    <fullName>Staff Function Info</fullName>
                </value>
                <value>
                    <fullName>Terminology</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Comment__c</fullName>
        <description>Comments relating to the solution status, including the dates of the status changes (e.g. product inactivated 5/00 and reactivated 6/06.</description>
        <label>Status Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cubic Meter</fullName>
                </value>
                <value>
                    <fullName>Day             </fullName>
                </value>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Foot</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Kg</fullName>
                </value>
                <value>
                    <fullName>Lb</fullName>
                </value>
                <value>
                    <fullName>Liter</fullName>
                </value>
                <value>
                    <fullName>Meter</fullName>
                </value>
                <value>
                    <fullName>Pair</fullName>
                </value>
                <value>
                    <fullName>Square Foot</fullName>
                </value>
                <value>
                    <fullName>Square Meter</fullName>
                </value>
                <value>
                    <fullName>Ton, Metric</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validated_By__c</fullName>
        <description>Person who validated the content (typically is the Content Owner)</description>
        <label>Validated By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Comments__c</fullName>
        <description>Comments related to content validation or other reference note</description>
        <label>Validation Comments</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Period_months__c</fullName>
        <description>Number of months after the last validation date, when a record is due to be displayed</description>
        <label>Validation Period (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllReviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Reviewed Solutions</label>
    </listViews>
    <listViews>
        <fullName>AllUnreviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Unreviewed Solutions</label>
    </listViews>
    <recordTypes>
        <fullName>DIMCProduct</fullName>
        <active>false</active>
        <businessProcess>Product</businessProcess>
        <description>Use this record type to maintain information about products and services.  Records of this type will also have an application description field.</description>
        <label>DIMC Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>DIMCSalesAid</fullName>
        <active>false</active>
        <businessProcess>Solution</businessProcess>
        <description>Use this record type to maintain information about sales aids.  This record type will have many fields not on the other record types.</description>
        <label>DIMC Sales Aid</label>
    </recordTypes>
    <recordTypes>
        <fullName>DIMCSolution</fullName>
        <active>true</active>
        <businessProcess>Solution</businessProcess>
        <description>Use this record type to maintain information about all other records that are not FAQs, Products or Sales Aids.</description>
        <label>DIMC Solution</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAQExternal</fullName>
        <active>false</active>
        <businessProcess>Solution</businessProcess>
        <description>Use this record type to maintain information about frequently asked questions.  Only records of this type will be able to be published to the internet</description>
        <label>FAQ - External</label>
    </recordTypes>
</CustomObject>